--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/keys-auto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/boxicons@latest/css/boxicons.min.css" rel="stylesheet">
     <title>Cerrajeria La Amenaza</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   </body>
