--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Cerrajeria La Amenaza</title>
+    <title>Auto Cerrajeria</title>
   </head>
   <body>
     <div id="root"></div>
