--- a/index.html
+++ b/index.html
@@ -2,17 +2,83 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/keys-auto.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="description"
+      content="Cerrajero 24 hrs - Servicios de cerrajería de emergencia y atención rápida las 24 horas en toda la ciudad. Profesionales certificados y confiables."
+    />
+    <meta
+      name="keywords"
+      content="cerrajero, cerrajero 24hrs, cerrajería, cerrajero de emergencia, cerrajería urgente, cerrajero profesional"
+    />
+    <meta name="author" content="autocerrajeria" />
+    <meta name="language" content="es" />
+    <meta name="theme-color" content="#4CAF50" />
+
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta
+      property="og:title"
+      content="Cerrajero 24 hrs - Tu solución rápida de cerrajería"
+    />
+    <meta
+      property="og:description"
+      content="Ofrecemos servicios de cerrajería las 24 horas, desde aperturas de puertas hasta reparación de cerraduras. Llama a nuestros expertos cerrajeros ahora."
+    />
     <meta
       property="og:image"
       content="https://autocerrajeria.netlify.app/car-mechanic-solid-60%20(1).png"
     />
+    <meta property="og:url" content="https://autocerrajeria.com.mx" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Cerrajero 24 hrs - Tu solución rápida de cerrajería"
+    />
+    <meta
+      name="twitter:description"
+      content="Servicios profesionales de cerrajería las 24 horas. Llama ahora para resolver tus problemas con cerraduras y puertas."
+    />
+    <meta
+      name="twitter:image"
+      content="https://autocerrajeria.netlify.app/car-mechanic-solid-60%20(1).png"
+    />
+
+    <link rel="icon" type="image/svg+xml" href="/keys-auto.png" />
     <link
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>Auto Cerrajeria</title>
+    <title>Cerrajero 24 hrs</title>
+
+    <!-- Additional Structured Data (JSON-LD) for Local Business -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Cerrajero 24 hrs",
+        "image": "https://autocerrajeria.netlify.app/car-mechanic-solid-60%20(1).png",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Vereda tropical",
+          "addressLocality": "Guadalupe",
+          "addressRegion": "Nuevo Leon",
+          "postalCode": "67133",
+          "addressCountry": "ES"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+52 8126373570",
+          "contactType": "Customer Service",
+          "areaServed": "ES",
+          "availableLanguage": "Spanish"
+        },
+        "url": "https://autocerrajeria.com.mx"
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
