--- a/index.html
+++ b/index.html
@@ -52,9 +52,24 @@
 
     <link rel="icon" type="image/svg+xml" href="/keys-auto.png" />
     <link
+      rel="preload"
       href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+      as="style"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
+      media="print"
+      onload="this.media='all'"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap"
       rel="stylesheet"
     />
+
     <title>Cerrajero 24 hrs</title>
 
     <!-- Additional Structured Data (JSON-LD) for Local Business -->
@@ -86,6 +101,9 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
+    ></script>
   </body>
 </html>
